Readme updated Small code refactoring (removed redundant comments, .collectors(toList()) replaced with .toList