@@ -7,7 +7,6 @@ import com.knubisoft.testlum.testing.model.pages.Text;
 import com.knubisoft.testlum.testing.model.pages.Xpath;
 import lombok.experimental.UtilityClass;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static java.lang.String.format;
 
@@ -21,19 +20,19 @@ public class By {
     public List<org.openqa.selenium.By> xpath(final List<Xpath> xpathList) {
         return xpathList.stream()
                 .map(xpath -> org.openqa.selenium.By.xpath(xpath.getValue()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<org.openqa.selenium.By> id(final List<Id> idList) {
         return idList.stream()
                 .map(id -> org.openqa.selenium.By.id(id.getValue()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<org.openqa.selenium.By> cssSelector(final List<CssSelector> cssSelectorList) {
         return cssSelectorList.stream()
                 .map(cssSelector -> org.openqa.selenium.By.cssSelector(cssSelector.getValue()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<org.openqa.selenium.By> className(final List<ClassName> classNameList) {
@@ -41,7 +40,7 @@ public class By {
                 .map(className -> org.openqa.selenium.By.xpath(
                         format(XPATH_TEMPLATE_FOR_CLASS_NAME_SEARCH, className.getValue())
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<org.openqa.selenium.By> text(final List<Text> textList) {
@@ -49,6 +48,6 @@ public class By {
                 .map(text -> org.openqa.selenium.By.xpath(text.isPlaceholder()
                         ? format(XPATH_TEMPLATE_FOR_TEXT_SEARCH_FROM_PLACEHOLDER, text.getValue())
                         : format(XPATH_TEMPLATE_FOR_TEXT_SEARCH, text.getValue())))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
