@@ -24,14 +24,12 @@ import org.springframework.beans.factory.annotation.Autowired;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 
 @Slf4j
 @InterpreterForClass(Sendgrid.class)
 public class SendGridInterpreter extends AbstractInterpreter<Sendgrid> {
 
-    //LOGS
     private static final String ALIAS_LOG = LogFormat.table("Alias");
     private static final String HTTP_METHOD_LOG = LogFormat.table("HTTP method");
     private static final String ENDPOINT_LOG = LogFormat.table("Endpoint");
@@ -42,7 +40,6 @@ public class SendGridInterpreter extends AbstractInterpreter<Sendgrid> {
     private static final String EXPECTED_CODE = "Expected code";
     private static final String ACTUAL_CODE = "Actual code";
 
-    //RESULT
     private static final String ALIAS = "Alias";
     private static final String ENDPOINT = "Endpoint";
     private static final String HTTP_METHOD = "HTTP method";
@@ -147,7 +144,6 @@ public class SendGridInterpreter extends AbstractInterpreter<Sendgrid> {
         return request;
     }
 
-    //LOGS
     private void logHttpInfo(final String alias, final String method, final String endpoint) {
         log.info(ALIAS_LOG, alias);
         log.info(HTTP_METHOD_LOG, method);
@@ -162,7 +158,6 @@ public class SendGridInterpreter extends AbstractInterpreter<Sendgrid> {
         }
     }
 
-    //RESULT
     private void addSendGridMetaData(final String alias,
                                      final String httpMethodName,
                                      final Map<String, String> headers,
@@ -179,6 +174,6 @@ public class SendGridInterpreter extends AbstractInterpreter<Sendgrid> {
     private void addHeadersMetaData(final Map<String, String> headers, final CommandResult result) {
         result.put(ADDITIONAL_HEADERS, headers.entrySet().stream()
                 .map(e -> String.format(HEADER_TEMPLATE, e.getKey(), e.getValue()))
-                .collect(Collectors.toList()));
+                .toList());
     }
 }
